--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -34,6 +34,9 @@ h6 {
 .topnav {
     font-size: 14px;
 }
+.topnav img{
+  height: 50px;
+}
 
 .lead {
     font-size: 18px;
@@ -122,7 +125,7 @@ h6 {
 .banner {
     padding: 100px 0;
     color: #f8f8f8;
-    background: url(../img/banner-bg.jpg) no-repeat center center;
+    background: url(../img/bottom_image-01.svg) no-repeat center center;
     background-size: cover;
 }
 
