--- a/pdftest/pdftest.css
+++ b/pdftest/pdftest.css
@@ -5,6 +5,12 @@ img {
   float: left;
 }
 @media print {
+  @page :left {
+    margin: 0.5in;
+  }
+  @page :right {
+      margin: 0.5in;
+  }
   .hidePlease {
     display: none;
   }
